Chat start right now

--- a/myschool/www/index.html
+++ b/myschool/www/index.html
@@ -25,6 +25,10 @@
     <script src="js/standalone-framework.js"></script>
     <script src="js/highcharts.js"></script>
     <script src="js/highcharts-3d.js"></script>
+     <!-- moment -->
+    <script src="js/moment.min.js"></script>
+    <!-- angular moment -->
+    <script src="js/angular-moment.min.js"></script>
     <script src="js/services.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
