--- a/greenEd/www/index.html
+++ b/greenEd/www/index.html
@@ -31,7 +31,7 @@
     <script src="js/controllers.js"></script>
   </head>
 
-  <body ng-app="starter" ion-track-auto>
+  <body ng-app="starter" ion-track-auto="">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
