--- a/greenEd/www/index.html
+++ b/greenEd/www/index.html
@@ -23,6 +23,9 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/standalone-framework.js"></script>
+    <script src="js/highcharts.js"></script>
+    <script src="js/highcharts-3d.js"></script>    
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
