--- a/angularfireapp/app/index.html
+++ b/angularfireapp/app/index.html
@@ -33,7 +33,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-
+<div ng-include="'views/navbar.html'"></div>
     <div ng-view=""></div>
 
 
