--- a/greenEd/www/index.html
+++ b/greenEd/www/index.html
@@ -5,30 +5,29 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-
-    <!-- compiled css output -->
-    <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
+    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <link href="css/ionic.app.css" rel="stylesheet">
+    -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <!-- Firebase -->
-    <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
-    <!-- Firebase Simple Login -->
-    <script src="https://cdn.firebase.com/js/simple-login/1.6.4/firebase-simple-login.js"></script>
-    <!-- AngularFire -->
-    <script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
-    <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+
+    <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/firebase.js"></script>
+    <script src="js/firebase-simple-login.js"></script>
+    <script src="js/angularfire.min.js"></script>    
     <script src="js/standalone-framework.js"></script>
     <script src="js/highcharts.js"></script>
     <script src="js/highcharts-3d.js"></script>    
     <script src="js/moment.min.js"></script>
-    <script src="js/angular-moment.min.js"></script>       
+    <script src="js/angular-moment.min.js"></script>   
     <script src="js/services.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
