--- a/greenEd/www/index.html
+++ b/greenEd/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>greened</title>
 
 
     <!-- compiled css output -->
@@ -18,14 +18,13 @@
 
     <!-- your app's js -->
     <script src="js/firebase.js"></script>
-    <script src="js/firebase-simple-login.js"></script>
     <script src="js/angularfire.min.js"></script>    
+    <script src="js/services.js"></script>
     <script src="js/standalone-framework.js"></script>
     <script src="js/highcharts.js"></script>
     <script src="js/highcharts-3d.js"></script>    
     <script src="js/moment.min.js"></script>
     <script src="js/angular-moment.min.js"></script>   
-    <script src="js/services.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
   </head>
