worked backend add teacher

--- a/greenEdBackend/app/index.html
+++ b/greenEdBackend/app/index.html
@@ -53,6 +53,8 @@
         <script src="scripts/controllers/dashboard.js"></script>
         <script src="scripts/controllers/addteacher.js"></script>
         <script src="scripts/controllers/addschool.js"></script>
+        <script src="scripts/controllers/addclass.js"></script>
+        <script src="scripts/controllers/addstudent.js"></script>
         <!-- endbuild -->
 
   </head>
