--- a/greenEd/www/index.html
+++ b/greenEd/www/index.html
@@ -19,6 +19,7 @@
     <!-- your app's js -->
     <script src="js/firebase.js"></script>
     <script src="js/angularfire.min.js"></script>    
+    <script src="js/firebase-util.min.js"></script>
     <script src="js/services.js"></script>
     <script src="js/standalone-framework.js"></script>
     <script src="js/highcharts.js"></script>
