--- a/greenEd/www/index.html
+++ b/greenEd/www/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
+<!doctype html>
+<html class="no-js">
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>greened</title>
@@ -21,6 +21,7 @@
     <script src="js/angularfire.min.js"></script>    
     <script src="js/firebase-util.min.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/ionic-filter.js"></script>
     <script src="js/standalone-framework.js"></script>
     <script src="js/highcharts.js"></script>
     <script src="js/highcharts-3d.js"></script>    
@@ -28,9 +29,10 @@
     <script src="js/angular-moment.min.js"></script>   
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-  </head>
+</head>
+<body ng-app="starter">
 
-  <body ng-app="starter">
-    <ion-nav-view></ion-nav-view>
-  </body>
+<ion-nav-view></ion-nav-view>
+
+</body>
 </html>
