--- a/greenedapp/app/index.html
+++ b/greenedapp/app/index.html
@@ -248,51 +248,32 @@
         <div class="row">
             <!--feature start-->
             <div class="text-center feature-head">
-                <h1>welcome to flatlab</h1>
+                <h1>welcome to greened mobile application</h1>
                 <p>Professional html Template Perfect for Admin Dashboard</p>
             </div>
             <div class="col-lg-4 col-sm-4">
                 <section>
-                    <div class="f-box">
-                        <i class=" icon-desktop"></i>
-                        <h2>responsive design</h2>
-                    </div>
+                    <img src="img/ajp.jpg" alt="">
                     <p class="f-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ablic jiener.</p>
                 </section>
             </div>
             <div class="col-lg-4 col-sm-4">
                 <section>
-                    <div class="f-box active">
-                        <i class=" icon-code"></i>
-                        <h2>friendly code</h2>
-                    </div>
+                    <img src="img/ajp.jpg" alt="">
                     <p class="f-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ablic jiener.</p>
                 </section>
             </div>
             <div class="col-lg-4 col-sm-4">
                 <section>
-                    <div class="f-box">
-                        <i class="icon-gears"></i>
-                        <h2>fully customizable</h2>
-                    </div>
+                    <img src="img/ajp.jpg" alt="">
                     <p class="f-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ablic jiener.</p>
                 </section>
             </div>
             <!--feature end-->
         </div>
-        <div class="row">
+       <div class="row">
             <!--quote start-->
-            <div class="quote">
-                <div class="col-lg-9 col-sm-9">
-                    <div class="quote-info">
-                        <h1>developer friendly code</h1>
-                        <p>Bundled with awesome features, UI resource unlimited colors, advanced theme options & much more!</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-3">
-                    <a href="#" class="btn btn-danger purchase-btn">Purchase now</a>
-                </div>
-            </div>
+            
             <!--quote end-->
         </div>
     </div>
@@ -325,7 +306,7 @@
                         <ul class="nav nav-tabs nav-justified ">
                             <li class="active">
                                 <a data-toggle="tab" href="#news">
-                                    News
+                                    Exams
                                 </a>
                             </li>
                             <li>
@@ -335,7 +316,7 @@
                             </li>
                             <li class="">
                                 <a data-toggle="tab" href="#notice-board">
-                                    Notice board
+                                    Holidays
                                 </a>
                             </li>
                         </ul>
@@ -345,7 +326,7 @@
                             <div id="news" class="tab-pane active">
                                 <article class="media">
                                     <a class="pull-left thumb p-thumb">
-                                        <img src="img/product1.jpg" alt="">
+                                        <img src="img/exam.jpg" alt="">
                                     </a>
                                     <div class="media-body">
                                         <a href="#" class=" p-head">News Tittle goes here</a>
@@ -354,7 +335,7 @@
                                 </article>
                                 <article class="media">
                                     <a class="pull-left thumb p-thumb">
-                                        <img src="img/product2.png" alt="">
+                                        <img src="img/exam1.jpg" alt="">
                                     </a>
                                     <div class="media-body">
                                         <a href="#" class=" p-head">News Tittle goes here 2</a>
@@ -363,7 +344,7 @@
                                 </article>
                                 <article class="media">
                                     <a class="pull-left thumb p-thumb">
-                                        <img src="img/product1.jpg" alt="">
+                                        <img src="img/exam2.jpg" alt="">
                                     </a>
                                     <div class="media-body">
                                         <a href="#" class=" p-head">News Tittle goes here 3</a>
@@ -374,7 +355,7 @@
                             <div id="events" class="tab-pane">
                                 <article class="media">
                                     <a class="pull-left thumb p-thumb">
-                                        <!--image goes here-->
+                                        <img src="img/eve.jpg" alt="">
                                     </a>
                                     <div class="media-body">
                                         <a href="#" class="cmt-head">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a>
@@ -382,8 +363,8 @@
                                     </div>
                                 </article>
                                 <article class="media">
-                                    <a class="pull-left thumb p-thumb">
-                                        <!--image goes here-->
+                                     <a class="pull-left thumb p-thumb">
+                                        <img src="img/eve1.jpg" alt="">
                                     </a>
                                     <div class="media-body">
                                         <a href="#" class="cmt-head">Nulla vel metus scelerisque ante sollicitudin commodo</a>
@@ -392,7 +373,7 @@
                                 </article>
                                 <article class="media">
                                     <a class="pull-left thumb p-thumb">
-                                        <!--image goes here-->
+                                        <img src="img/eve2.jpg" alt="">
                                     </a>
                                     <div class="media-body">
                                         <a href="#" class="cmt-head">Donec lacinia congue felis in faucibus. </a>
@@ -454,12 +435,12 @@
                 <ul class="bxslider">
                     <li>
                         <div class="element item view view-tenth" data-zlname="reverse-effect">
-                            <img src="img/works/img1.jpg" alt="" />
+                            <img src="img/works/image1.png" alt="" />
                             <div class="mask">
                                 <a data-zl-popup="link" href="javascript:;">
                                     <i class="icon-link"></i>
                                 </a>
-                                <a data-zl-popup="link2" class="fancybox" rel="group" href="img/works/img1.jpg">
+                                <a data-zl-popup="link2" class="fancybox" rel="group" href="img/works/image1.png">
                                     <i class="icon-search"></i>
                                 </a>
                             </div>
@@ -467,12 +448,12 @@
                     </li>
                     <li>
                         <div class="element item view view-tenth" data-zlname="reverse-effect">
-                            <img src="img/works/img2.jpg" alt="" />
+                            <img src="img/works/image2.png" alt="" />
                             <div class="mask">
                                 <a data-zl-popup="link" href="javascript:;">
                                     <i class="icon-link"></i>
                                 </a>
-                                <a data-zl-popup="link2" class="fancybox" rel="group" href="img/works/img2.jpg">
+                                <a data-zl-popup="link2" class="fancybox" rel="group" href="img/works/image2.png">
                                     <i class="icon-search"></i>
                                 </a>
                             </div>
@@ -480,12 +461,12 @@
                     </li>
                     <li>
                         <div class="element item view view-tenth" data-zlname="reverse-effect">
-                            <img src="img/works/img3.jpg" alt="" />
+                            <img src="img/works/image3.png" alt="" />
                             <div class="mask">
                                 <a data-zl-popup="link" href="javascript:;">
                                     <i class="icon-link"></i>
                                 </a>
-                                <a data-zl-popup="link2" class="fancybox" rel="group" href="img/works/img3.jpg">
+                                <a data-zl-popup="link2" class="fancybox" rel="group" href="img/works/image3.png">
                                     <i class="icon-search"></i>
                                 </a>
                             </div>
@@ -493,12 +474,12 @@
                     </li>
                     <li>
                         <div class="element item view view-tenth" data-zlname="reverse-effect">
-                            <img src="img/works/img4.jpg" alt="" />
+                            <img src="img/works/image4.png" alt="" />
                             <div class="mask">
                                 <a data-zl-popup="link" href="javascript:;">
                                     <i class="icon-link"></i>
                                 </a>
-                                <a data-zl-popup="link2" class="fancybox" rel="group" href="img/works/img4.jpg">
+                                <a data-zl-popup="link2" class="fancybox" rel="group" href="img/works/image4.png">
                                     <i class="icon-search"></i>
                                 </a>
                             </div>
