--- a/greenedapp/app/index.html
+++ b/greenedapp/app/index.html
@@ -41,7 +41,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Green<span>Ed</span></a>
+                    <a class="navbar-brand" href="index.html">
+                    <img src="img/icon.png" alt=""></a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
@@ -165,7 +166,7 @@
 
                  <!-- 3rd slide  -->
                  <li data-transition="fade" data-slotamount="7" data-masterspeed="300" data-delay="9400" data-thumb="">
-                     <img src="img/banner/red-bg.jpg" alt="">
+                     <img src="img/banner/red-bg.png" alt="">
                      <div class="caption lfl slide_item_right"
                           data-x="10"
                           data-y="105"
@@ -253,19 +254,19 @@
             </div>
             <div class="col-lg-4 col-sm-4">
                 <section>
-                    <img src="img/ajp.jpg" alt="">
+                    <img src="img/report.png" alt="">
                     <p class="f-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ablic jiener.</p>
                 </section>
             </div>
             <div class="col-lg-4 col-sm-4">
                 <section>
-                    <img src="img/ajp.jpg" alt="">
+                    <img src="img/report1.png" alt="">
                     <p class="f-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ablic jiener.</p>
                 </section>
             </div>
             <div class="col-lg-4 col-sm-4">
                 <section>
-                    <img src="img/ajp.jpg" alt="">
+                    <img src="img/report2.png" alt="">
                     <p class="f-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ablic jiener.</p>
                 </section>
             </div>
@@ -284,7 +285,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center">
-                    <img src="img/property-img.png" alt="">
+                    <img src="img/mobile.png" alt="">
                 </div>
                 <div class="col-lg-6 col-sm-6">
                     <h1>flat & modern trend design</h1>
@@ -295,7 +296,7 @@
         </div>
     </div>
     <!--property end-->
-
+    
      <div class="container">
 
         <div class="row">
@@ -474,6 +475,19 @@
                     </li>
                     <li>
                         <div class="element item view view-tenth" data-zlname="reverse-effect">
+                            <img src="img/works/img5.png" alt="" />
+                            <div class="mask">
+                                <a data-zl-popup="link" href="javascript:;">
+                                    <i class="icon-link"></i>
+                                </a>
+                                <a data-zl-popup="link2" class="fancybox" rel="group" href="img/works/img5.png">
+                                    <i class="icon-search"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="element item view view-tenth" data-zlname="reverse-effect">
                             <img src="img/works/image4.png" alt="" />
                             <div class="mask">
                                 <a data-zl-popup="link" href="javascript:;">
@@ -485,32 +499,7 @@
                             </div>
                         </div>
                     </li>
-                    <li>
-                        <div class="element item view view-tenth" data-zlname="reverse-effect">
-                            <img src="img/works/img5.jpg" alt="" />
-                            <div class="mask">
-                                <a data-zl-popup="link" href="javascript:;">
-                                    <i class="icon-link"></i>
-                                </a>
-                                <a data-zl-popup="link2" class="fancybox" rel="group" href="img/works/img5.jpg">
-                                    <i class="icon-search"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="element item view view-tenth" data-zlname="reverse-effect">
-                            <img src="img/works/img6.jpg" alt="" />
-                            <div class="mask">
-                                <a data-zl-popup="link" href="javascript:;">
-                                    <i class="icon-link"></i>
-                                </a>
-                                <a data-zl-popup="link2" class="fancybox" rel="group" href="img/works/img6.jpg">
-                                    <i class="icon-search"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </li>
+                    
                     <li>
                         <div class="element item view view-tenth" data-zlname="reverse-effect">
                             <img src="img/works/img7.jpg" alt="" />
