--- a/greenEd_dev/www/index.html
+++ b/greenEd_dev/www/index.html
@@ -41,6 +41,9 @@
     <script src="js/angular-moment.min.js"></script>   
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <link rel="stylesheet" href="lib/flex-calendar/dist/flex-calendar.css">
+
+<script type="text/javascript" src="lib/flex-calendar/dist/flex-calendar.js"></script>
 </head>
 <body ng-app="starter">
 
