--- a/greenEdBackend/app/index.html
+++ b/greenEdBackend/app/index.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="styles/material-design-icons.css" type="text/css" />
   <link rel="stylesheet" href="styles/font.css" type="text/css" />
   <link rel="stylesheet" href="styles/app.css" type="text/css" />
+  <link rel="stylesheet" href="libs/angular/angular-xeditable/dist/css/xeditable.css" type="text/css" />
     <!-- endbuild -->
   </head>
   <body ng-app="greenEdBackendApp">
@@ -270,6 +271,7 @@
         <script src="libs/angular/angular-bootstrap/ui-bootstrap-tpls.js"></script>
         <script src="libs/angular/oclazyload/dist/ocLazyLoad.js"></script>
         <script src="libs/angular/angular-loading-bar/build/loading-bar.js"></script>
+        <script src="libs/angular/angular-xeditable/dist/js/xeditable.js"></script>
 
         <script src="scripts/aes.js"></script>
         <script src="scripts/app.js"></script>
@@ -283,6 +285,7 @@
         <script src="scripts/controllers/account.js"></script>
         <script src="scripts/directives/ngShowAuth.js"></script>
         <script src="scripts/directives/ngHideAuth.js"></script>
+        <script src="scripts/config.lazyload.js"></script>
         <script src="scripts/directives/lazyload.js"></script>
         <script src="scripts/directives/ui-jp.js"></script>
         <script src="scripts/directives/ui-nav.js"></script>
@@ -298,6 +301,7 @@
         <script src="scripts/controllers/dashboard.js"></script>
         <script src="scripts/controllers/addteacher.js"></script>
         <script src="scripts/controllers/addstudent.js"></script>
+        <script src="scripts/controllers/addmarks.js"></script>
         <!-- endbuild -->
 </body>
 </html>
