--- a/greenedapp/app/doc.html
+++ b/greenedapp/app/doc.html
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 top30">
-                <div class="bs-callout bs-callout-primary">
+                <div class="bs-callout bs-callout-primary2">
                     <h4>HeadMaster Wall Page</h4>
   
                     <p>A common wall page for all users including hm, teachers and parents with posting access for hm and teachers, they can post image as well as text in wall posts. Teachers and hm can share tips and thoughts for parents to upbring their kids to think out of box and achieve great skill set for the modern world. Parents can view the posts submitted by hm and teachers and they can like or dislike the posts based on the content.</p>
@@ -120,7 +120,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 top30">
-                <div class="bs-callout bs-callout-primary">
+                <div class="bs-callout bs-callout-primary2">
                     <h4>Dashboard Page</h4>
   
                     <p>Dashboard displays the performance of the school to hm, performance of the class to class teacher, performance of subjects to subject teacher and performance of his/her kids to parents. By default it displays the result of the latest examination. There is a filter on the top right corner, using that filter a user can choose previous examinations of current year as well as results of previous years.</p>
@@ -153,7 +153,7 @@
     <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 top30">
-                <div class="bs-callout bs-callout-primary">
+                <div class="bs-callout bs-callout-primary2">
                     <h4>HM Dashboard – Subjects Pass/Fail Tab – Grades and Class Toppers</h4>
   
                     <p>Pass - Fail : Hm Dashboard contains details of total number of students pass/fail from the entire school. He/She can click on the chart to find the list of students passed as well as the list of students failed. From that list he/she can click on any particular student to get all his academic details. He/She can also use the search bar to find a particular student from the long list of students and this helps not to scroll down the entire list to find a student. Classnames are displayed along with student name so that it can help to find students from a particular class with out any confusion even if there are few other students with same name in the school. From these list he/she can use the back button on the top left corner to go to the previous page.</p>
@@ -187,7 +187,7 @@
              <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 top30">
-                <div class="bs-callout bs-callout-primary">
+                <div class="bs-callout bs-callout-primary2">
                     <h4>Parent Dashboard</h4>
   
                     <p>By Default it contains the marks and details of the latest exam. You can see all the marks and details of previous exams by simply clicking and selecting the appropraiate exams from the filter on the top  right corner of the app.<br><b>Subject Marks:</b> A bar chart displaying marks taken by student on each subject with the pass marks displayed on blue bar and fail marks displayed on red bars.<br>
@@ -223,7 +223,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 top30">
-                <div class="bs-callout bs-callout-primary">
+                <div class="bs-callout bs-callout-primary2">
   <h4>Overall Dashboard – Subject Marks Line Graph</h4>
   <p>Subjects : A line graph is shown to display all individual subjects marks taken by student on each exam conducted on the current academic year. Each subject is shown with an unique color and by clicking on the subject name given below you can disable and enable the subject line graph for every subject.</p>
          </div>
@@ -256,7 +256,7 @@
                <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 top30">
-                <div class="bs-callout bs-callout-primary">
+                <div class="bs-callout bs-callout-primary2">
                     <h4>FavoriteTeacher Page</h4>
   
                     <p>Favourite teacher is a page available only for parents to select a favourite teacher from the list of teachers who were teaching there kids. They can simply swipe or use like or dislike button to select a favourite teacher. They can swipe towards left to disliking and swipe towards right to select the favourite teacher from the list of all teachers provided. This is an exclusive feature to select the favourite teacher. They can change a previous selection by selecting some other teacher as favourite teacher any time they wish.</p>
