--- a/greenedapp/app/index.html
+++ b/greenedapp/app/index.html
@@ -214,7 +214,7 @@
         <div class="row">
             <!--feature start-->
             <div class="text-center feature-head">
-            <div class="bs-callout bs-callout-primary">
+            <div class="bs-callout bs-callout-primary1">
                <center><h3>welcome to greened mobile application</h3></center>
                 <p>GreedEd is am amazing innovative mobile app that is going to make users life better. 
                 Parents can see every detail of their child on there fingertips anytime anywhere. </p>
@@ -222,7 +222,7 @@
             <div class="col-lg-4 col-sm-4">
                 <section>
                     <img src="img/screen/img4.png" alt="">
-                    <p class="f-text"><div class="bs-callout bs-callout-primary">
+                    <p class="f-text"><div class="bs-callout bs-callout-primary1">
                     Hm can see details of any student of the school on his smartphone anytime anywhere.Parents can have a more active engagement with school in upbringing their kids brighter.They can get to know all latest happenings at school on daily basis. 
 </p></div>
                 </section>
@@ -230,14 +230,14 @@
             <div class="col-lg-4 col-sm-4">
                 <section>
                     <img src="img/screen/img3.png" alt="">
-                    <p class="f-text"><div class="bs-callout bs-callout-primary">Parents can communicate with parents and hm regarding their children. 
+                    <p class="f-text"><div class="bs-callout bs-callout-primary1">Parents can communicate with parents and hm regarding their children. 
                     This will invoke an more active engagement feeling for parents rather than signing a report card once a month or even attending a parents meeting once in a while.</p></div>
                 </section>
             </div>
             <div class="col-lg-4 col-sm-4">
                 <section>
                     <img src="img/screen/img9.png" alt="">
-                    <p class="f-text"><div class="bs-callout bs-callout-primary">Many studies revealed that image is processed in brain 66 percent faster than text.GreenEd provides graphical representation of academic results for parents. A cool graphical display is used to show details of students.Ways greened makes life better</p></div>
+                    <p class="f-text"><div class="bs-callout bs-callout-primary1">Many studies revealed that image is processed in brain 66 percent faster than text.GreenEd provides graphical representation of academic results for parents. A cool graphical display is used to show details of students.Ways greened makes life better</p></div>
                 </section>
             </div>
             <!--feature end-->
