--- a/greenEd_dev/www/index.html
+++ b/greenEd_dev/www/index.html
@@ -7,7 +7,7 @@
 
 
     <!-- compiled css output -->
-    <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+    <link href="css/ionic.app.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.min.js"></script>
