--- a/qcityguide/www/index.html
+++ b/qcityguide/www/index.html
@@ -8,7 +8,7 @@
 
     <!-- compiled css output -->
       <link href="css/ionic.app.min.css" rel="stylesheet">
-      <link href="css/maxx-style.min.css" rel="stylesheet">
+      <link href="css/maxx-style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
