--- a/qcityguide/www/index.html
+++ b/qcityguide/www/index.html
@@ -8,11 +8,11 @@
 
     <!-- compiled css output -->
       <link href="css/ionic.app.min.css" rel="stylesheet">
-      <link href="css/maxx-style.min.css" rel="stylesheet">
+      <link href="css/maxx-style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
@@ -20,8 +20,9 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/directives.js"></script>
   </head>
-  <body ng-app="hoss_app" class="platform-android platform-cordova platform-webview">
+  <body ng-app="starter" class="platform-android platform-cordova platform-webview">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
