--- a/qcityguide/www/index.html
+++ b/qcityguide/www/index.html
@@ -17,9 +17,11 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/firebase.js"></script>
+    <script src="js/angularfire.min.js"></script>
+    <script src="js/services.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
   </head>
   <body ng-app="starter" class="platform-android platform-cordova platform-webview">
