--- a/qcityguide/www/index.html
+++ b/qcityguide/www/index.html
@@ -22,7 +22,7 @@
     <script src="js/services.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/directives.js"></script>
+    <script src="js/ionic-filter.js"></script>
   </head>
   <body ng-app="starter" class="platform-android platform-cordova platform-webview">
     <ion-nav-view></ion-nav-view>
